<resources>
    <string name="app_name">Reading Buddy</string>
    <string name="reading_buddy">📕 Reading Buddy</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="random_quote">Random Quote:</string>
    <string name="quote_text">Quote Text</string>
    <string name="textview">TextView</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">Back</string>
    <string name="author_name">Author Name</string>
    <string name="email_text">Email</string>
    <string name="number_of_books">Number of books read:</string>
    <string name="logout_text">Logout</string>
    <string name="header_title">Reading Buddy</string>
    <string name="my_books_title">My Books</string>
    <string name="all_books_title">All books</string>
    <string name="remove_text">REMOVE</string>
    <string name="read_text">READ</string>
    <string name="title_text">Title</string>
    <string name="my_account_title">My Account</string>
    <string name="oops_text">Oops!</string>
    <string name="no_books_text">It seems that you don\'t have read any books for the moment.</string>
    <string name="redirect_to_list_text">You can find books in the \"All Books\" tab!</string>
</resources>